Changed the way that columns are recorded to have been tested.